hid overflow to avoid scroll

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body,
 html {
   padding: 0;
   margin: 0;
+  overflow: hidden;
 }
 
 main {
